fix(survey): be more strict with selection
- remove not related to truncation margin

--- a/apps/survey/src/scss/common.scss
+++ b/apps/survey/src/scss/common.scss
@@ -1,11 +1,10 @@
-.overflow-button {
+.btn-truncate {
   display: block;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  margin-left: 1em;
 
-  span {
+  .v-btn__content {
     display: block;
     white-space: nowrap;
     overflow: hidden;
